hooking up all the fields in the UI. TODO: call backend functions with given arguments

--- a/source/static/display.html
+++ b/source/static/display.html
@@ -1,4 +1,4 @@
-<input type="radio" id="filtered" name="displaychoice" value="filtered">
+<input type="radio" id="filtered" name="displaychoice" value="filtered" checked="checked">
 <label for="filtered">Filtered Image</label><br>
 
 <input type="radio" id="dft" name="displaychoice" value="dft">
