--- a/source/static/filter.html
+++ b/source/static/filter.html
@@ -1,13 +1,13 @@
 <table class="tab">
     <tr>
         <td>
-            <input type="radio" id="bandreject" name="filterchoice" value="bandreject">
+            <input type="radio" id="bandreject" name="filterchoice" value="bandreject" checked="checked">
             <label for="bandreject">Bandreject</label>
         </td>
         <td>
-            <select class='right'>
+            <select id="bandreject_type" class='right'>
                 <option value="gaussian">gaussian</option>
-                <option value="gaussian">gaussian</option>
+                <option value="gaussian2">gaussian2</option>
             </select>
         </td>
         <td></td>
@@ -15,12 +15,12 @@
     <tr>
         <td></td>
         <td><label for="thickness">Thickness</label></td>
-        <td><input type="number" id="thickness" name="thickness" min="1" max="5"></td>
+        <td><input type="number" id="thickness" name="thickness" min="1" max="10000" value="1"></td>
     </tr>
     <tr>
         <td></td>
         <td><label for="radius">Radius</label></td>
-        <td><input type="number" id="radius" name="radius" min="1" max="5"></td>
+        <td><input type="number" id="radius" name="radius" min="1" max="10000" value="1"></td>
     </tr>
     <tr>
         <td>
@@ -28,7 +28,7 @@
             <label for="notch">Notch</label>
         </td>
         <td>
-            <select class='right'>
+            <select id="notch_type" class='right'>
                 <option value="ideal">ideal</option>
                 <option value="ideal">ideal</option>
             </select>
