--- a/source/static/display.html
+++ b/source/static/display.html
@@ -1,11 +1,20 @@
-<input type="radio" id="filtered" name="displaychoice" value="filtered" checked="checked">
-<label for="filtered">Filtered Image</label><br>
+<!--<input type="radio" id="filtered" name="displaychoice" value="filtered" checked="checked">-->
+<!--<label for="filtered">Filtered Image</label><br>-->
 
-<input type="radio" id="dft" name="displaychoice" value="dft">
-<label for="dft">DFT</label><br>
+<!--<input type="radio" id="dft" name="displaychoice" value="dft">-->
+<!--<label for="dft">DFT</label><br>-->
 
-<input type="radio" id="mask" name="displaychoice" value="mask">
-<label for="mask">Mask</label><br>
+<!--<input type="radio" id="mask" name="displaychoice" value="mask">-->
+<!--<label for="mask">Mask</label><br>-->
 
-<input type="radio" id="histogram" name="displaychoice" value="histogram">
-<label for="histogram">Histogram</label><br>
+<!--<input type="radio" id="histogram" name="displaychoice" value="histogram">-->
+<!--<label for="histogram">Histogram</label><br>-->
+
+
+<label for="displaychoice">Display</label>
+<select id="displaychoice" class='form-control right'>
+    <option value="filtered">Filtered Image</option>
+    <option value="dft">DFT</option>
+    <option value="mask">Mask</option>
+    <option value="histogram">Histogram</option>
+</select>
