--- a/source/static/statistical.html
+++ b/source/static/statistical.html
@@ -1,4 +1,4 @@
-<table class="spaced" width="100%">
+<table class="spaced">
     <tr>
         <td>
             <label for="filter_type">Filter</label>
