--- a/source/static/display.html
+++ b/source/static/display.html
@@ -10,11 +10,21 @@
 <!--<input type="radio" id="histogram" name="displaychoice" value="histogram">-->
 <!--<label for="histogram">Histogram</label><br>-->
 
-
-<label for="displaychoice">Display</label>
-<select id="displaychoice" class='form-control right'>
-    <option value="filtered">Filtered Image</option>
-    <option value="dft">DFT</option>
-    <option value="mask">Mask</option>
-    <option value="histogram">Histogram</option>
-</select>
+<table class="right" width="100%">
+    <tr>
+        <td>
+            <label for="displaychoice" class="display_label">Display</label>
+        </td>
+        <td>
+            <select id="displaychoice" class='form-control right'>
+                <option value="filtered">Filtered Image</option>
+                <option value="dft">DFT</option>
+                <option value="mask">Mask</option>
+                <option value="histogram">Histogram</option>
+            </select>
+        </td>
+        <td>
+            <input id="apply_btn" type="button" class="btn btn-primary" value="Apply">
+        </td>
+    </tr>
+</table>
