--- a/source/static/noise.html
+++ b/source/static/noise.html
@@ -27,8 +27,8 @@
     </tr>
     <tr>
         <td></td>
-        <td><label for="wiener_k">K</label></td>
-        <td><input type="number" id="wiener_k" name="wiener_k" min="1" max="10000" value="1"></td>
+        <td><label for="generative_noise_k">K</label></td>
+        <td><input type="number" id="generative_noise_k" name="generative_noise_k" min="1" max="10000" value="1"></td>
     </tr>
 
     <!-- Upload noise -->
