changes in app.py

--- a/source/static/periodic.html
+++ b/source/static/periodic.html
@@ -8,8 +8,9 @@
         </td>
         <td>
             <select id="bandreject_type" class='form-control' class='right'>
-                <option value="gaussian">Gaussian</option>
-                <option value="gaussian">Add more options...</option>
+                <option value="BR_IDEAL_FILTER">Ideal</option>
+                <option value="BR_GAUSSIAN_FILTER">Gaussian</option>
+                <option value="BR_BUTTERWORTH_FILTER">Butterworth</option>
             </select>
         </td>
         <td></td>
