Added fix for Windows uploads.

--- a/source/static/statistical.html
+++ b/source/static/statistical.html
@@ -5,8 +5,19 @@
         </td>
         <td>
             <select id="filter_type" class='form-control'>
-                <option value="mean_filter">Mean filter</option>
-                <option value="mean_filter">Add more options...</option>
+                <option value="MEAN_ARITHMETIC_FILTER">Arithmetic Mean Filter</option>
+                <option value="MEAN_GEOMETRIC_FILTER">Geometric Mean Filter</option>
+                <option value="MEAN_HARMONIC_FILTER">Harmonic Mean Filter</option>
+                <option value="MEAN_CONTRAHARMONIC_FILTER">Contraharmonic Mean Filter</option>
+                <option value="OS_MEDIAN_FILTER">Median Filter</option>
+                <option value="OS_MAX_FILTER">Max Filter</option>
+                <option value="OS_MIN_FILTER">Min Filter</option>
+                <option value="OS_MIDPOINT_FILTER">Midpoint Filter</option>
+                <option value="OS_ALPHA_TRIMMED_FILTER">Alpha-Trimmed Filter</option>
+                <option value="OS_MAX_FILTER">Max Filter</option>
+                <option value="ADAPTIVE_FILTER">Adaptive Mean Filter</option>
+                <option value="ADAPTIVE_MEDIAN_FILTER">Adaptive Median Filter</option>
+
             </select>
         </td>
     </tr>
