--- a/source/static/periodic.html
+++ b/source/static/periodic.html
@@ -3,11 +3,11 @@
     <!-- BANDREJECT -->
     <tr>
         <td>
-            <input type="radio" id="bandreject" name="filterchoice" value="bandreject" checked="checked">
-            <label for="bandreject">Bandreject</label>
+            <input type="radio" id="bandreject" name="filterchoice" value="BR" checked="checked">
+            <label for="BR">Bandreject</label>
         </td>
         <td>
-            <select id="bandreject_type" class='form-control' class='right'>
+            <select id="BR_filter_type" class='form-control' class='right'>
                 <option value="BR_IDEAL_FILTER">Ideal</option>
                 <option value="BR_GAUSSIAN_FILTER">Gaussian</option>
                 <option value="BR_BUTTERWORTH_FILTER">Butterworth</option>
@@ -17,31 +17,32 @@
     </tr>
     <tr>
         <td></td>
-        <td><label for="bandreject_cutoff">Cutoff</label></td>
-        <td><input type="number" id="bandreject_cutoff" name="bandreject_cutoff" min="1" max="10000" value="1"></td>
+        <td><label for="BR_cutoff">Cutoff</label></td>
+        <td><input type="number" id="BR_cutoff" name="BR_cutoff" min="1" max="10000" value="1"></td>
     </tr>
     <tr>
         <td></td>
-        <td><label for="bandreject_width">Width</label></td>
-        <td><input type="number" id="bandreject_width" name="bandreject_width" min="1" max="10000" value="1"></td>
+        <td><label for="BR_width">Width</label></td>
+        <td><input type="number" id="BR_width" name="BR_width" min="1" max="10000" value="1"></td>
     </tr>
     <tr>
         <td></td>
-        <td><label for="bandreject_order">Order</label></td>
-        <td><input type="number" id="bandreject_order" name="bandreject_order" min="1" max="10000" value="1"></td>
+        <td><label for="BR_order">Order</label></td>
+        <td><input type="number" id="BR_order" name="BR_order" min="1" max="10000" value="1"></td>
     </tr>
 
 
     <!-- NOTCH -->
     <tr>
         <td>
-            <input type="radio" id="notch" name="filterchoice" value="notch">
-            <label for="notch">Notch</label>
+            <input type="radio" id="notch" name="filterchoice" value="NOTCH">
+            <label for="NOTCH">Notch</label>
         </td>
         <td>
-            <select id="notch_type" class='form-control right'>
-                <option value="ideal">ideal</option>
-                <option value="ideal">Add more options...</option>
+            <select id="NOTCH_filter_type" class='form-control right'>
+                <option value="IDEAL_FILTER">Ideal Notch</option>
+                <option value="GAUSSIAN_FILTER">Gaussian Notch</option>
+                <option value="BUTTERWORTH_FILTER">Butterworth Notch</option>
             </select>
         </td>
         <td></td>
