--- a/source/static/periodic.html
+++ b/source/static/periodic.html
@@ -62,31 +62,36 @@
     <!-- INVERSE FILTER -->
     <tr>
         <td>
-            <input type="radio" id="INVERSE" name="filterchoice" value="INVERSE">
-            <label for="INVERSE">Inverse Filter</label>
+            <input type="radio" id="INVERSE_FILTER" name="filterchoice" value="INVERSE_FILTER">
+            <label for="INVERSE_FILTER">Inverse Filter</label>
         </td>
         <td></td>
         <td></td>
     </tr>
     <tr>
         <td></td>
-        <td><label for="INVERSE_k">K</label></td>
-        <td><input type="number" id="INVERSE_k" name="INVERSE_k" min="1" max="10000" value="1"></td>
+        <td><label for="INVERSE_FILTER_k">K</label></td>
+        <td><input type="number" id="INVERSE_FILTER_k" name="INVERSE_FILTER_k" min="1" max="10000" value="1"></td>
     </tr>
 
 
     <!-- WIENER -->
     <tr>
         <td>
-            <input type="radio" id="WIENER" name="filterchoice" value="WIENER">
-            <label for="WIENER">Wiener</label>
+            <input type="radio" id="WIENER_FILTER" name="filterchoice" value="WIENER_FILTER">
+            <label for="WIENER_FILTER">Wiener</label>
         </td>
         <td></td>
         <td></td>
     </tr>
     <tr>
         <td></td>
-        <td><label for="WIENER_k">K</label></td>
-        <td><input type="number" id="WIENER_k" name="WIENER_k" min="1" max="10000" value="1"></td>
+        <td><label for="WIENER_FILTER_k">K</label></td>
+        <td><input type="number" id="WIENER_FILTER_k" name="WIENER_FILTER_k" min="1" max="10000" value="0.025"></td>
+    </tr>
+
+        <td></td>
+        <td><label for="WIENER_FILTER_spn">Sprectrum Noise</label></td>
+        <td><input type="number" id="WIENER_FILTER_spn" name="WIENER_FILTER_spn" min="1" max="10000" value="0.0001"></td>
     </tr>
 </table>
