--- a/source/static/noise.html
+++ b/source/static/noise.html
@@ -1,4 +1,4 @@
-<table class="spaced">
+<table class="spaced" width="50%">
 
     <!-- Generative Blur Noise -->
     <tr>
@@ -33,13 +33,10 @@
 
     <!-- Upload noise -->
     <tr>
-        <td colspan="3">
-            <form id="browse_noise_form" enctype="multipart/form-data">
-                <spa>
-                    <input type="file" name="image">
-                    <input id="upload_noise_btn" type=button class="btn btn-primary" value="Upload">
-                </spa>
-            </form>
-        </td>
+        <form id="browse_noise_form" enctype="multipart/form-data">
+            <td></td>
+            <td><input type="file" name="image"></td>
+            <td><input id="upload_noise_btn" type=button class="btn btn-primary" value="Upload"></td>
+        </form>
     </tr>
 </table>
