adding display functionality (reactive dropdown)

--- a/source/static/noise.html
+++ b/source/static/noise.html
@@ -1,4 +1,4 @@
-<table class="spaced" width="50%">
+<table class="spaced" width="40%">
 
     <!-- Generative Blur Noise -->
     <tr>
@@ -36,7 +36,7 @@
         <form id="browse_noise_form" enctype="multipart/form-data">
             <td></td>
             <td><input type="file" name="image"></td>
-            <td><input id="upload_noise_btn" type=button class="btn btn-primary" value="Upload"></td>
+            <td><input id="upload_noise_btn" type=button class="btn btn-primary" value="Save"></td>
         </form>
     </tr>
 </table>
